# ibd-scrna-strna-metabolism

./: .gitignore  README.md  index.html  index.qmd  pyproject.toml  references.bib
output/consolidated_figures/: consolidated_figures_overview.json  consolidated_priority_signal_summary.csv
output/deconvolution_sensitivity/: deconvolution_sensitivity_overview.json  expected_marker_deconvolution_slide_correlations.csv  marker_deconvolution_paired_sensitivity.csv  marker_deconvolution_patient_long.csv  paired_marker_score_differences.csv
output/harreman_all_slides/: harreman_all_gene_pair_results.csv  harreman_all_metabolite_results.csv  harreman_all_run_summary.csv  harreman_all_slides_overview.json  harreman_metabolite_difference_summary.csv  harreman_patient_paired_metabolite_differences.csv  paired_slide_metadata.csv
output/harreman_deconv_interpretation/: harreman_deconv_interpretation_overview.json  marker_deconvolution_correlations.csv  marker_scores_by_slide.csv  paired_difference_harreman_deconv_correlations.csv  (+2 more)
scripts/: 00_inventory.py  01_baseline_overview.py  02_spatial_qc.py  03_metabolism_scores.py  04_harreman_pilot.py  05_harreman_all_slides.py  06_spatial_deconvolution.py  07_harreman_deconv_interpretation.py  08_transporter_spatial_validation.py  09_spatial_region_validation.py  10_scrna_metabolism_transporters.py  11_integrated_evidence_table.py  12_patient_paired_models.py  13_region_sensitivity.py  14_deconvolution_sensitivity.py  15_consolidated_figures.py  16_healthy_control_comparisons.py  harreman_utils.py
styles/: sonrai.css
(+140 files in other folders)
