[project]
name = "ibd-scrna-strna-metabolism"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "decoupler>=2.1.6",
    "harreman>=0.1.3",
    "openpyxl>=3.1.5",
    "pyarrow>=24.0.0",
    "scanpy>=1.12.1",
    "squidpy>=1.8.1",
]
